--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
         overflow-x: hidden;
     }
 
-    /* Background image container */
+    /* Background image centered */
     .background-img {
-        position: fixed;      /* stays behind content */
-        top: 0;
+        position: fixed;      
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
-        width: 80%;           /* smaller background width */
+        transform: translate(-50%, -50%);
+        width: 80%;           
         max-width: 600px;
         height: auto;
+        max-height: 90%;
         z-index: 0;
-        pointer-events: none; /* clicks pass through */
+        pointer-events: none; 
     }
 
     /* Container for button + small icon */
     .bottom-content-wrapper {
-        position: fixed;      /* always visible */
-        bottom: 5%;           /* distance from bottom */
+        position: fixed;      
+        bottom: 5%;           
         left: 50%;
         transform: translateX(-50%);
         display: flex;
