--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         overflow-x: hidden;
     }
 
-    /* Background image centered */
+    /* Background image positioned lower than center */
     .background-img {
         position: fixed;      
-        top: 50%;
+        top: 35%;             /* lower than middle */
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translateX(-50%) translateY(-35%); /* adjust for top position */
         width: 80%;           
         max-width: 600px;
         height: auto;
