--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         overflow-x: hidden;
     }
 
-    /* Background image positioned lower than center */
+    /* Background image positioned lower than top but above center */
     .background-img {
         position: fixed;      
-        top: 35%;             /* lower than middle */
+        top: 30%;            /* lower than top but not centered */
         left: 50%;
-        transform: translateX(-50%) translateY(-35%); /* adjust for top position */
+        transform: translateX(-50%); /* only horizontal centering */
         width: 80%;           
         max-width: 600px;
         height: auto;
