--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
         overflow-x: hidden;
     }
 
+    /* Heading slightly lower */
+    .top-heading {
+        position: fixed;
+        top: 15%;            
+        left: 50%;
+        transform: translateX(-50%);
+        color: red;
+        font-size: 2em;
+        font-weight: 900;
+        text-align: center;
+        z-index: 2;
+    }
+
+    /* Make YOUR bold */
+    .top-heading b {
+        font-weight: 900;
+    }
+
     /* Background image positioned lower than top but above center */
     .background-img {
         position: fixed;      
-        top: 30%;            /* lower than top but not centered */
+        top: 30%;           
         left: 50%;
-        transform: translateX(-50%); /* only horizontal centering */
+        transform: translateX(-50%);
         width: 80%;           
         max-width: 600px;
         height: auto;
@@ -37,17 +55,25 @@
         flex-direction: column;
         align-items: center;
         z-index: 1;
+        text-align: center;
+    }
+
+    /* New label above button */
+    .map-label {
+        font-size: 1.8em;
+        font-weight: 900;
+        color: red;
+        margin-bottom: 15px; /* spacing below label */
     }
 
     .centered-image img {
         width: 50px !important;
         height: auto !important;
-        margin-bottom: 10px;
+        margin-bottom: 15px; /* spacing between image and button */
         display: block;
     }
 
     .link-container {
-        text-align: center;
         font-weight: 900;
         text-transform: uppercase;
         letter-spacing: 1px;
@@ -81,9 +107,20 @@
 
     /* Responsive tweaks */
     @media (max-width: 600px) {
+        .top-heading {
+            font-size: 1.5em;
+            top: 10%;
+        }
+        .map-label {
+            font-size: 1.5em;
+            margin-bottom: 10px;
+        }
         .enter-link-box {
             font-size: 1.5em;
             padding: 15px 20px;
+        }
+        .centered-image img {
+            margin-bottom: 10px;
         }
         .bottom-content-wrapper {
             bottom: 7%;
@@ -93,11 +130,17 @@
 </head>
 <body>
 
+    <!-- Heading slightly lower -->
+    <div class="top-heading">
+        ARE ANTIFA SCUM ACTIVE IN <b>YOUR</b> AREA?
+    </div>
+
     <!-- Background Image -->
     <img class="background-img" src="https://i.ibb.co/5hJcsYMW/Test.jpg" alt="Background">
 
     <!-- Bottom Content -->
     <div class="bottom-content-wrapper">
+        <div class="map-label">UK AND IRELAND INTERACTIVE MAP</div>
         <div class="centered-image">
             <img src="https://urlto.me/1RrZ" alt="Image above the link">
         </div>
