--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         overflow-x: hidden;
     }
 
-    /* Heading slightly lower */
+    /* Top heading */
     .top-heading {
         position: fixed;
         top: 15%;            
@@ -26,7 +26,7 @@
         z-index: 2;
     }
 
-    /* Make YOUR bold */
+    /* Bold YOUR */
     .top-heading b {
         font-weight: 900;
     }
@@ -45,7 +45,7 @@
         pointer-events: none; 
     }
 
-    /* Container for button + small icon */
+    /* Bottom content wrapper */
     .bottom-content-wrapper {
         position: fixed;      
         bottom: 5%;           
@@ -55,21 +55,22 @@
         flex-direction: column;
         align-items: center;
         z-index: 1;
-        color: red;
         text-align: center;
     }
 
-    /* New label above button */
+    /* Map label spacing fine-tuned */
     .map-label {
-        font-size: 1.5em;
+        font-size: 1.8em;
         font-weight: 900;
-        margin-bottom: 10px;
+        color: red;
+        margin-top: 40px;  /* fine-tuned */
+        margin-bottom: 15px;
     }
 
     .centered-image img {
         width: 50px !important;
         height: auto !important;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         display: block;
     }
 
@@ -112,11 +113,16 @@
             top: 10%;
         }
         .map-label {
-            font-size: 1.2em;
+            font-size: 1.5em;
+            margin-top: 30px;
+            margin-bottom: 10px;
         }
         .enter-link-box {
             font-size: 1.5em;
             padding: 15px 20px;
+        }
+        .centered-image img {
+            margin-bottom: 10px;
         }
         .bottom-content-wrapper {
             bottom: 7%;
@@ -126,7 +132,7 @@
 </head>
 <body>
 
-    <!-- Heading slightly lower -->
+    <!-- Top heading -->
     <div class="top-heading">
         ARE ANTIFA SCUM ACTIVE IN <b>YOUR</b> AREA?
     </div>
