Add fixed map label above bottom content
Added a fixed position map label above the bottom content and removed the previous map label from the bottom content.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
         pointer-events: none; 
     }
 
+    /* Map label positioned above bottom content */
+    .map-label {
+        position: fixed;
+        bottom: 130px;   /* adjust to sit above small image and button */
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 1.8em;
+        font-weight: 900;
+        color: red;
+        text-align: center;
+        z-index: 2;
+    }
+
     /* Bottom content wrapper */
     .bottom-content-wrapper {
         position: fixed;      
@@ -56,15 +69,6 @@
         align-items: center;
         z-index: 1;
         text-align: center;
-    }
-
-    /* Map label spacing fine-tuned */
-    .map-label {
-        font-size: 1.8em;
-        font-weight: 900;
-        color: red;
-        margin-top: 40px;  /* fine-tuned */
-        margin-bottom: 15px;
     }
 
     .centered-image img {
@@ -114,8 +118,7 @@
         }
         .map-label {
             font-size: 1.5em;
-            margin-top: 30px;
-            margin-bottom: 10px;
+            bottom: 100px;
         }
         .enter-link-box {
             font-size: 1.5em;
@@ -140,9 +143,11 @@
     <!-- Background Image -->
     <img class="background-img" src="https://i.ibb.co/5hJcsYMW/Test.jpg" alt="Background">
 
+    <!-- Map label above bottom content -->
+    <div class="map-label">UK AND IRELAND INTERACTIVE MAP</div>
+
     <!-- Bottom Content -->
     <div class="bottom-content-wrapper">
-        <div class="map-label">UK AND IRELAND INTERACTIVE MAP</div>
         <div class="centered-image">
             <img src="https://urlto.me/1RrZ" alt="Image above the link">
         </div>
