Update comments for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         overflow-x: hidden;
     }
 
-    /* Top heading slightly higher */
+    /* Top heading slightly above top */
     .top-heading {
         position: fixed;
         top: 10%;            
@@ -30,7 +30,7 @@
         font-weight: 900;
     }
 
-    /* Background image moved slightly up */
+    /* Background image slightly above center */
     .background-img {
         position: fixed;      
         top: 20%;           
@@ -44,10 +44,10 @@
         pointer-events: none; 
     }
 
-    /* Bottom content wrapper stays at bottom */
+    /* Bottom content wrapper */
     .bottom-content-wrapper {
-        position: fixed;      
-        bottom: 5%;           
+        position: fixed;
+        bottom: 5%;
         left: 50%;
         transform: translateX(-50%);
         display: flex;
@@ -57,12 +57,12 @@
         text-align: center;
     }
 
-    /* Map label moved slightly up inside bottom wrapper */
+    /* Map label above small image and button */
     .map-label {
         font-size: 1.8em;
         font-weight: 900;
         color: red;
-        margin-bottom: 20px; /* space between label and small image */
+        margin-bottom: 20px; /* spacing between label and small image */
     }
 
     .centered-image img {
