--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     /* Top heading moved up */
     .top-heading {
         position: fixed;
-        top: 3%;  /* moved higher */
+        top: 3%;  /* higher up */
         left: 50%;
         transform: translateX(-50%);
         color: red;
@@ -30,10 +30,10 @@
         font-weight: 900;
     }
 
-    /* Background image moved up */
+    /* Background image moved up slightly */
     .background-img {
         position: fixed;
-        top: 10%;  /* moved higher */
+        top: 10%;  /* higher up */
         left: 50%;
         transform: translateX(-50%);
         width: 80%;
@@ -44,7 +44,7 @@
         pointer-events: none;
     }
 
-    /* Bottom content wrapper stays at bottom */
+    /* Bottom content wrapper */
     .bottom-content-wrapper {
         position: fixed;
         bottom: 5%;
@@ -57,12 +57,12 @@
         text-align: center;
     }
 
-    /* Map label above small image and button */
+    /* Map label slightly lowered */
     .map-label {
         font-size: 1.8em;
         font-weight: 900;
         color: red;
-        margin-bottom: 20px; /* space between label and small image */
+        margin-bottom: 15px; /* slightly lower than before (was 20px) */
     }
 
     .centered-image img {
@@ -104,6 +104,7 @@
         transform: scale(1.05);
     }
 
+    /* Responsive tweaks */
     @media (max-width: 600px) {
         .top-heading {
             font-size: 1.5em;
@@ -115,7 +116,7 @@
         }
         .map-label {
             font-size: 1.5em;
-            margin-bottom: 15px;
+            margin-bottom: 12px; /* slightly smaller for mobile */
         }
         .enter-link-box {
             font-size: 1.5em;
